fix(sdk): improve contrast for project explorer items

--- a/ext/sdk/resources/sdk-root/shell/src/fxdk/project/contrib/explorer/item.module.scss
+++ b/ext/sdk/resources/sdk-root/shell/src/fxdk/project/contrib/explorer/item.module.scss
@@ -12,8 +12,10 @@
     width: 100%;
     height: $q * 8;
 
-    color: rgba($fgColor, .5);
+    color: rgba($fgColor, .75);
     font-size: $fs08;
+    font-weight: 100;
+    letter-spacing: .25px;
 
     &:hover,
     &.active {
@@ -95,6 +97,7 @@
 
         svg {
           font-size: $fs08;
+          color: rgba($fgColor, .5);
         }
       }
 
